use zap for logging
Signed-off-by: Jon Carl <grounded042@icloud.com>

--- a/charts/fission-all/templates/fluentd.yaml
+++ b/charts/fission-all/templates/fluentd.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
         - name: fluentd
-          image: "{{ .Values.repository }}/{{ .Values.logger.fluentdImage }}:{{ .Values.logger.fluentdImageTag }}"
+          image: "{{ .Values.logger.fluentdImageRepository }}/{{ .Values.logger.fluentdImage }}:{{ .Values.logger.fluentdImageTag }}"
           imagePullPolicy: {{ .Values.pullPolicy }}
           env:
             - name: INFLUXDB_ADDRESS
